<resources>
    <string name="app_name">rama</string>
    <string name="title_activity_log_in">logInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- LogIn Activity and sign up and forgot password-->

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="log_In">Ingresar</string>
    <string name="forgot_my_password">Olvidé mi contraseña</string>
    <string name="log_in_with_facebook">Ingresar con Facebook</string>
    <string name="sign_in_with_email">Registrate con tu email</string>
    <string name="input_email">Ingrese su correo electrónico</string>
    <string name="input_password">Ingrese contraseña</string>
    <string name="input_password_again">Ingrese contraseña nuevamente</string>
    <string name="sign_in">Registrarse</string>
    <string name="go_back">REGRESAR</string>
    <string name="change_password">Cambiar contraseña</string>

    <!--menú items-->

    <string name="calendario">Calendario</string>
    <string name="forum">Foro</string>
    <string name="Process">Procesos</string>
    <string name="news">Noticias</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--lista de processos del fragment-->

    <string name="Search_by_key">Buscar por palabra clave</string>


</resources>